# mcp-server

./: .env  README.md  client.py  mathserver.py  mcp_server.py  puchmcp.py  pyproject.toml  requirement.txt  test.py
